infra/kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tenpo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  tls:
    - hosts:
        - tenpo-challenge.centralus.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: tenpo-challenge.centralus.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: gateway-api
              servicePort: 5000
            path: /
